examples/invalid/unknown_override_target.jd
template t {
    conclusion c is "A conclusion"
    strategy s is "A strategy"
    s supports c
    @support placeholder is "Abstract"
    placeholder supports s
}

justification j implements t {
    evidence wrong:placeholder is "Evidence"
}
